# AiKv

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  clippy.toml  deny.toml  docker-compose.cluster.yml  docker-compose.dev.yml  docker-compose.yml  rustfmt.toml  test_config.toml  validate_commands.rs
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml  security.yml
aikv-toolchain/: Cargo.toml  README.md
aikv-toolchain/deploy/: init-cluster.sh
aikv-toolchain/src/: app.rs  cluster.rs  commands.rs  config.rs  deploy.rs  docs.rs  main.rs  tui.rs  ui.rs
benches/: README.md  aikv_benchmark.rs  comprehensive_benchmark.rs
config/: README.md  aikv-cluster.toml  aikv.toml
config/cluster/: aikv1.toml  aikv2.toml  aikv3.toml  aikv4.toml  aikv5.toml  aikv6.toml
deploy/: README.md  aikv-node1.toml  aikv-node2.toml  aikv-node3.toml  aikv-node4.toml  aikv-node5.toml  aikv-node6.toml  aikv.toml  docker-compose.yml  init-cluster.sh  start.sh  stop.sh
deploy-single/: README.md  aikv.toml  start.sh  stop.sh
docs/: AIDB_0_6_3.md  AIDB_CLUSTER_API_REFERENCE.md  AIDB_INTEGRATION.md  AIDB_V051_MIGRATION.md  AIDB_V051_UPGRADE.md  API.md  ARCHITECTURE.md  ARCHITECTURE_REFACTORING.md  BEST_PRACTICES.md  CLUSTER_ADAPTATION_PROPOSAL.md  CLUSTER_BUS_ANALYSIS.md  CLUSTER_METADATA_SYNC_FIX.md  CLUSTER_TROUBLESHOOTING.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  LUA_SCRIPTING.md  LUA_TRANSACTION_DESIGN.md  LUA_TRANSACTION_SUMMARY.md  METARAFT_DYNAMIC_MEMBERSHIP.md  PERFORMANCE.md  PERFORMANCE_TUNING.md  PERSISTENCE.md  QUICK_START.md  README.md  SUMMARY.md  TROUBLESHOOTING.md  index.md
docs/archive/: AIDB_V050_UPGRADE.md  AIDB_WRITEBATCH_UPGRADE.md  ARCHITECTURE_COMPARISON.md  CLUSTER_REFACTORING_SUMMARY.md  PRIORITY_7_COMPLETION.md  README.md
docs/development/: 01-guide-quick-start.md  plan.md
docs/development/api/: 01-commands.md  02-cluster-api.md
docs/development/architecture/: 01-overview.md  02-refactoring.md  03-cluster.md  04-storage.md  05-lua-scripting.md
docs/guide/: 01-quick-start.md  02-deployment.md  03-troubleshooting.md  04-best-practices.md
examples/: aidb_storage_example.rs  client_example.rs  cluster_example.rs  cluster_startup.rs  data_types_example.rs  lua_transaction_demo.rs  persistence_demo.rs  pipeline_example.rs
scripts/: README.md  cluster_init.sh  e2e_test.sh  validate_all_commands.sh
src/: error.rs  lib.rs  main.rs
src/cluster/: cluster_bus_legacy.rs  commands.rs  commands.rs.backup  commands_legacy.rs  config.rs  metaraft.rs  metaraft.rs.old  mod.rs  mod.rs.old  mod_new.rs  node.rs  raft_service.rs  router.rs  router_legacy.rs  types.rs
src/command/: database.rs  hash.rs  json.rs  key.rs  list.rs  mod.rs  script.rs  server.rs  set.rs  string.rs  zset.rs
src/observability/: logging.rs  metrics.rs  mod.rs  tracing_setup.rs
src/persistence/: aof.rs  config.rs  mod.rs  rdb.rs
src/protocol/: mod.rs  parser.rs  types.rs
src/server/: connection.rs  mod.rs  monitor.rs
src/storage/: aidb_adapter.rs  memory_adapter.rs  mod.rs
tests/: aidb_writebatch_test.rs  basic_commands_test.rs  cluster_metaraft_tests.rs  cluster_new_tests.rs  cluster_sync_test.rs  command_validation_test.rs  data_types_test.rs  integration_test.rs  monitor_test.rs  script_commands_test.rs  validate_commands.rs
