[package]
name = "aikv"
version = "0.1.0"
edition = "2021"
authors = ["Jerry"]
description = "Redis protocol compatible key-value store based on AiDb"
license = "MIT"
repository = "https://github.com/Genuineh/AiKv"
readme = "README.md"
keywords = ["redis", "kvstore", "database", "resp"]
categories = ["database", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Networking and serialization
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"

# Storage engine (to be added when AiDb is available)
# aidb = { git = "https://github.com/Genuineh/AiDb", tag = "v0.1.0" }

[dev-dependencies]
redis = "0.24"

[[bin]]
name = "aikv"
path = "src/main.rs"
