[package]
name = "aikv"
version = "0.1.0"
edition = "2021"
authors = ["Jerry"]
description = "Redis protocol compatible key-value store based on AiDb"
license = "MIT"
repository = "https://github.com/Genuineh/AiKv"
readme = "README.md"
keywords = ["redis", "kvstore", "database", "resp"]
categories = ["database", "network-programming"]

[features]
default = []
cluster = ["aidb/raft-cluster", "openraft"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Networking and serialization
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"

# Storage engine
aidb = { git = "https://github.com/Genuineh/AiDb", tag = "v0.5.1" }

# Raft consensus (optional, for cluster mode)
openraft = { version = "0.9", features = ["serde"], optional = true }

# Lua scripting
mlua = { version = "0.10", features = ["lua54", "async", "send", "vendored"] }
sha1 = "0.10"

[dev-dependencies]
redis = "0.24"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bin]]
name = "aikv"
path = "src/main.rs"

[[bench]]
name = "aikv_benchmark"
harness = false

[[bench]]
name = "comprehensive_benchmark"
harness = false
