[package]
name = "aikv-toolchain"
version = "0.2.0"
edition = "2021"
authors = ["Jerry"]
description = "AiKv project management toolchain with TUI interface"
license = "MIT"
repository = "https://github.com/Genuineh/AiKv"
readme = "README.md"
keywords = ["aikv", "toolchain", "tui", "devops", "deployment"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "aikv-tool"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.35", features = ["full", "process"] }

# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File system operations
walkdir = "2.4"
tempfile = "3.8"

# System info
sysinfo = "0.32"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Colors and formatting
colored = "2.0"

# Better panic handling
better-panic = "0.3"
